RESOLVED FIXED 93143
Negative timestamps for TextTrackCue
https://bugs.webkit.org/show_bug.cgi?id=93143
Summary Negative timestamps for TextTrackCue
Anna Cavender
Reported 2012-08-03 10:54:46 PDT
It is not clear what the expected behavior is when negative startTime and endTime values are specified for TextTrackCue objects. This is currently being discussed at the WHATWG: https://www.w3.org/Bugs/Public/show_bug.cgi?id=18480 Once a decision has been made, this bug will implement the solution.
Attachments
Eric Carlson
Comment 1 2012-09-11 14:10:58 PDT
http://trac.webkit.org/changeset/124645 changed our behavior, but leaving this open pending resolution of the w3c bug.
Eric Carlson
Comment 2 2014-02-07 16:46:16 PST
The changes made for r124645 are incorrect, the spec now says: The text track cue start time and text track cue end time can be negative. (The current playback position can never be negative, though, so cues entirely before time zero cannot be active.)
Ahmad Saleem
Comment 3 2023-07-28 00:56:39 PDT
Blink Commit (for Merge): https://chromium-review.googlesource.com/c/chromium/src/+/863270 ^ Locally doing this make us pass at least two WPT test. Can give it a go? @Eric - any recommendation?
Eric Carlson
Comment 4 2023-07-28 08:46:21 PDT
(In reply to Ahmad Saleem from comment #3) > Blink Commit (for Merge): > https://chromium-review.googlesource.com/c/chromium/src/+/863270 > > ^ Locally doing this make us pass at least two WPT test. Can give it a go? > > @Eric - any recommendation? Yes, I think it would be good to make this change.
Radar WebKit Bug Importer
Comment 5 2023-07-28 08:46:32 PDT
EWS
Comment 6 2023-08-18 09:52:50 PDT
Committed 267042@main (fb0116deed64): <https://commits.webkit.org/267042@main> Reviewed commits have been landed. Closing PR #16165 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.